// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a stop card 1`] = `
<div
  className="m-tnm-sidebar__route"
  data-mode="bus"
>
  <div
    className="c-link-block h3 m-tnm-sidebar__route-name u-bg--bus"
  >
    <a
      className="c-link-block__outer-link"
      href="/schedules/route-id"
    >
      <span
        className="sr-only"
      >
        Go to route
      </span>
    </a>
    <div
      className="c-link-block__inner"
    >
      <span
        className="notranslate"
      >
        <span
          className="bus-route-sign"
        >
          Route Name
        </span>
        <div
          className="c-link-block__view-schedule"
        >
          View schedule
        </div>
      </span>
    </div>
  </div>
  <div
    className="m-tnm-sidebar__route-stop"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    style={
      Object {
        "cursor": "pointer",
      }
    }
    tabIndex={0}
  >
    <div
      className="m-tnm-sidebar__stop-info"
    >
      <a
        className="m-tnm-sidebar__stop-name notranslate"
        href="/stops/stop-id"
      >
        <span
          aria-hidden="true"
          className="notranslate m-tnm-sidebar__stop-marker"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Stop Name
        <span
          aria-hidden="false"
          className="notranslate m-tnm-sidebar__stop-accessible"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </a>
      <div
        className="m-tnm-sidebar__stop-distance"
      >
        238 ft
      </div>
    </div>
    <div
      className="m-tnm-sidebar__direction"
    >
      <div
        className="m-tnm-sidebar__direction-name u-small-caps"
      >
        Outbound
      </div>
      <div
        className="m-tnm-sidebar__direction-headsigns"
      >
        <div
          className="m-tnm-sidebar__headsign-schedule m-tnm-sidebar__headsign-schedule--condensed"
        >
          <div
            className="m-tnm-sidebar__headsign"
          >
            <div
              className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large notranslate"
            >
              Headsign
            </div>
          </div>
          <div
            className="m-tnm-sidebar__schedules"
          >
            <div
              className="m-tnm-sidebar__schedule"
            >
              <div
                className="m-tnm-sidebar__time m-tnm-sidebar__time--schedule"
              >
                <div
                  className="m-tnm-sidebar__time-number"
                >
                  4:30
                </div>
                <div
                  className="m-tnm-sidebar__time-mins"
                >
                  PM
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it renders a stop card for the silver line 1`] = `
<div
  className="m-tnm-sidebar__route"
  data-mode="bus"
>
  <div
    className="c-link-block h3 m-tnm-sidebar__route-name u-bg--silver-line"
  >
    <a
      className="c-link-block__outer-link"
      href="/schedules/751"
    >
      <span
        className="sr-only"
      >
        Go to route
      </span>
    </a>
    <div
      className="c-link-block__inner"
    >
      <span
        className="notranslate"
      >
        <span
          className=""
        >
          Silver Line Route Name
        </span>
        <div
          className="c-link-block__view-schedule"
        >
          View schedule
        </div>
      </span>
    </div>
  </div>
  <div
    className="m-tnm-sidebar__route-stop"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    style={
      Object {
        "cursor": "pointer",
      }
    }
    tabIndex={0}
  >
    <div
      className="m-tnm-sidebar__stop-info"
    >
      <a
        className="m-tnm-sidebar__stop-name notranslate"
        href="/stops/stop-id"
      >
        <span
          aria-hidden="true"
          className="notranslate m-tnm-sidebar__stop-marker"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Stop Name
        <span
          aria-hidden="false"
          className="notranslate m-tnm-sidebar__stop-accessible"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </a>
      <div
        className="m-tnm-sidebar__stop-distance"
      >
        238 ft
      </div>
    </div>
    <div
      className="m-tnm-sidebar__direction"
    >
      <div
        className="m-tnm-sidebar__direction-name u-small-caps"
      >
        Outbound
      </div>
      <div
        className="m-tnm-sidebar__direction-headsigns"
      >
        <div
          className="m-tnm-sidebar__headsign-schedule m-tnm-sidebar__headsign-schedule--condensed"
        >
          <div
            className="m-tnm-sidebar__headsign"
          >
            <div
              className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large notranslate"
            >
              Headsign
            </div>
          </div>
          <div
            className="m-tnm-sidebar__schedules"
          >
            <div
              className="m-tnm-sidebar__schedule"
            >
              <div
                className="m-tnm-sidebar__time m-tnm-sidebar__time--schedule"
              >
                <div
                  className="m-tnm-sidebar__time-number"
                >
                  4:30
                </div>
                <div
                  className="m-tnm-sidebar__time-mins"
                >
                  PM
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`returns null if route has no schedules 1`] = `null`;
